# modern-programming-methods

./: README.md  environment.yml
Lectures/Lecture01/: lecture.ipynb
Lectures/Lecture02/: lecture.ipynb  lecture_solutions.ipynb  savedata.txt  supplemental_exercises.ipynb
Lectures/Lecture03/: algorithms-profiling-optimisation-solutions.ipynb  algorithms-profiling-optimisation.ipynb
Lectures/Lecture04/: lecture.ipynb
Lectures/Lecture04/files/: to_debug.py
Lectures/Lecture04/files/l4mod-complete/: l4mod.py  test_l4mod.py
Lectures/Lecture04/files/l4mod-complete/docs/: conf.py
Lectures/Lecture05/: argparse_example.py  argv-example.py  python-packaging.ipynb  rot13_module.py
Lectures/Lecture05/MyPackage/: LICENSE  Matrix_arithmetic.py  __init__.py  pyproject.toml  test_file.py
Lectures/Lecture06/: lecture.ipynb
Lectures/Lecture07/: floating-point-arithmetic.ipynb
foo/: pyvenv.cfg
foo/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jsonpointer  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py  undill
